--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.0.0",
     "@enhasa/kiwicore": "^1.0.7",
+    "@ladle/react": "^5.0.3",
     "flag-icons": "^7.3.2",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.2.2",
